# engllm-chat

./: .gitignore  Makefile  README.md  TASKS.md  pyproject.toml
.github/workflows/: ci.yaml
docs/: ARCHITECTURE.md  CHAT_CONFIG_REFERENCE.md  CHAT_PLAN.md  CHAT_SPEC.md  CHAT_USAGE.md  CONTRIBUTING_CHAT_ARCHITECTURE.md  DETERMINISTIC_TOOLS.md  EXTENDING_CHAT_SYSTEM.md  GLOSSARY.md  LLM_STRUCTURED_CALLS.md  REFERENCE_IMPLEMENTATION.md  TESTING_AND_DEBUGGING.md
scripts/: build_pex.py  chat_smoke.py  ollama_chat_smoke.py  openai_api_probe.py  smoke_pex.py
src/engllm_chat/: __init__.py  __main__.py  _pex_build.py  probe_openai_api.py  smoke_chat.py  smoke_ollama_chat.py
src/engllm_chat/cli/: __init__.py  main.py
src/engllm_chat/config/: __init__.py  loader.py
src/engllm_chat/core/: __init__.py  tokenize.py
src/engllm_chat/core/chat/: __init__.py  listing.py  models.py
src/engllm_chat/core/chat/_listing/: content.py  ops.py  paths.py
src/engllm_chat/domain/: __init__.py  models.py
src/engllm_chat/domain/_models/: chat_protocol.py  common.py  config.py  responses.py  retained.py
src/engllm_chat/llm/: __init__.py  base.py  factory.py  mock.py  ollama.py  openai_compatible.py
src/engllm_chat/llm/_openai_compatible/: parsing.py  retries.py  serialization.py  transport.py
src/engllm_chat/prompts/: __init__.py
src/engllm_chat/prompts/chat/: __init__.py  builders.py  templates.py
src/engllm_chat/tools/: __init__.py
src/engllm_chat/tools/chat/: __init__.py  app.py  controller.py  models.py  presentation.py  registry.py  screens.py  workflow.py
tests/: conftest.py  test_chat_config.py  test_chat_listing_internals.py  test_chat_registry.py  test_chat_tools.py  test_chat_ui.py  test_chat_workflow.py  test_chat_workflow_internals.py  test_cli_additional.py  test_domain_model_internals.py  test_imports.py  test_llm_components.py  test_ollama_chat_smoke.py  test_openai_compatible_internals.py  test_pex_build.py  test_probe_openai_api.py  test_runtime_models_and_helpers.py
(+4 files in other folders)
